--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,11 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+#cypress
+cypress.env.json
+
 #amplify
+amplify/team-provider-info.json
 amplify/\#current-cloud-backend
 amplify/.config/local-*
 amplify/mock-data
@@ -37,7 +41,3 @@ amplifyconfiguration.json
 amplify-build-config.json
 amplify-gradle-config.json
 amplifytools.xcconfig
-team-provider-info.json
-
-#cypress
-cypress.env.json
