--- a/amplify/backend/auth/amplifycypressauthbld78e1bab/amplifycypressauthbld78e1bab-cloudformation-template.yml
+++ b/amplify/backend/auth/amplifycypressauthbld78e1bab/amplifycypressauthbld78e1bab-cloudformation-template.yml
@@ -106,7 +106,7 @@ Resources:
   # Created to allow the UserPool SMS Config to publish via the Simple Notification Service during MFA Process
     Type: AWS::IAM::Role
     Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, 'amplif79147f35_sns-role', !Join ['',[ 'sns', '79147f35', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
+      RoleName: !If [ShouldNotCreateEnvResources, 'amplifd78e1bab_sns-role', !Join ['',[ 'sns', 'd78e1bab', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
       AssumeRolePolicyDocument: 
         Version: "2012-10-17"
         Statement: 
@@ -118,10 +118,10 @@ Resources:
               - "sts:AssumeRole"
             Condition: 
               StringEquals:
-                sts:ExternalId: amplif79147f35_role_external_id
+                sts:ExternalId: amplifd78e1bab_role_external_id
       Policies: 
         - 
-          PolicyName: amplif79147f35-sns-policy
+          PolicyName: amplifd78e1bab-sns-policy
           PolicyDocument: 
             Version: "2012-10-17"
             Statement: 
@@ -167,7 +167,7 @@ Resources:
       SmsVerificationMessage: !Ref smsVerificationMessage
       SmsConfiguration: 
         SnsCallerArn: !GetAtt SNSRole.Arn
-        ExternalId: amplif79147f35_role_external_id
+        ExternalId: amplifd78e1bab_role_external_id
     
   
   UserPoolClientWeb:
@@ -175,7 +175,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: amplif79147f35_app_clientWeb
+      ClientName: amplifd78e1bab_app_clientWeb
       
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
       UserPoolId: !Ref UserPool
@@ -185,7 +185,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: amplif79147f35_app_client
+      ClientName: amplifd78e1bab_app_client
       
       GenerateSecret: !Ref userpoolClientGenerateSecret
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
@@ -196,7 +196,7 @@ Resources:
   # Created to execute Lambda which gets userpool app client config values
     Type: 'AWS::IAM::Role'
     Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, !Ref userpoolClientLambdaRole, !Join ['',['upClientLambdaRole', '79147f35', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
+      RoleName: !If [ShouldNotCreateEnvResources, !Ref userpoolClientLambdaRole, !Join ['',['upClientLambdaRole', 'd78e1bab', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
       AssumeRolePolicyDocument:
         Version: '2012-10-17'
         Statement:
@@ -250,7 +250,7 @@ Resources:
   # Marked as depending on UserPoolClientRole for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: amplif79147f35_userpoolclient_lambda_iam_policy
+      PolicyName: amplifd78e1bab_userpoolclient_lambda_iam_policy
       Roles: 
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -267,7 +267,7 @@ Resources:
   # Marked as depending on UserPoolClientLambdaPolicy for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: amplif79147f35_userpoolclient_lambda_log_policy
+      PolicyName: amplifd78e1bab_userpoolclient_lambda_log_policy
       Roles: 
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -307,7 +307,7 @@ Resources:
   # Always created
     Type: AWS::Cognito::IdentityPool
     Properties: 
-      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'amplifycypressauthte79147f35_identitypool_79147f35', !Join ['',['amplifycypressauthte79147f35_identitypool_79147f35', '__', !Ref env]]]
+      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'amplifycypressauthbld78e1bab_identitypool_d78e1bab', !Join ['',['amplifycypressauthbld78e1bab_identitypool_d78e1bab', '__', !Ref env]]]
       
       CognitoIdentityProviders:
         - ClientId:  !Ref UserPoolClient
